--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                     <textarea id="message" name="message" rows="5" required></textarea>
                 </div>
                 <button type="submit">Verstuur</button>
-                <p id="successMessage" style="display: none;">Bedankt voor uw bericht! We nemen spoedig contact met u op.</p>
+                <p id="successMessage" style="display: none;">Bedankt voor uw bericht! Ik neem spoedig contact met u op.</p>
             </form>
         </section>
     </main>
