--- a/projecten.html
+++ b/projecten.html
@@ -27,16 +27,19 @@
             <div class="project">
                 <h3>Calculator</h3>
                 <p>Een eenvoudige rekenmachine gebouwd met HTML, CSS en JavaScript.</p>
+                <p>Gebruikte technologieën: HTML, CSS, JavaScript.</p>
                 <a href="calculator.html">Bekijk project</a>
             </div>
             <div class="project">
                 <h3>Tic-Tac-Toe Game</h3>
-                <p>Een klassiek Tic-Tac-Toe spel gebouwd met HTML, CSS en JavaScript.</p>
+                <p>Een interactieve tic-tac-toe game.</p>
+                <p>Gebruikte technologieën: HTML, CSS, JavaScript.</p>
                 <a href="tic-tac-toe.html">Bekijk project</a>
             </div>
             <div class="project">
                 <h3>Weather App</h3>
-                <p>Een eenvoudige weerapplicatie die actuele weersinformatie toont, gebouwd met HTML, CSS en JavaScript.</p>
+                <p>Een weerapplicatie die actuele weersinformatie toont.</p>
+                <p>Gebruikte technologieën: HTML, CSS, JavaScript.</p>
                 <a href="weather-app.html">Bekijk project</a>
             </div>
         </section>
