--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <main>
         <section class="contact">
             <h2>Contact</h2>
-            <form id="contactForm">
+            <form id="contactForm" action="send_mail.php" method="post">
                 <div class="form-group">
                     <label for="name">Naam:</label>
                     <input type="text" id="name" name="name" required>
@@ -39,7 +39,7 @@
                     <textarea id="message" name="message" rows="5" required></textarea>
                 </div>
                 <button type="submit">Verstuur</button>
-                <p id="successMessage" style="display: none;">Bedankt voor uw bericht! Ik neem spoedig contact met u op.</p>
+                <p id="successMessage" style="display: none;">Bedankt voor uw bericht! We nemen spoedig contact met u op.</p>
             </form>
         </section>
     </main>
