--- a/calculator.html
+++ b/calculator.html
@@ -26,7 +26,7 @@
         <section class="calculator">
             <h2>Calculator</h2>
             <div class="calc-container">
-                <input type="text" id="display" disabled>
+                <input type="text" id="display" value="0" disabled>
                 <div class="calc-buttons">
                     <button data-number="1">1</button>
                     <button data-number="2">2</button>
@@ -54,5 +54,4 @@
     </footer>
 </body>
 </html>
-
 
