--- a/calculator.html
+++ b/calculator.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,7 +27,7 @@
         <section class="calculator">
             <h2>Calculator</h2>
             <div class="calc-container">
-                <input type="text" id="display" value="0" disabled>
+                <input type="text" id="display" disabled>
                 <div class="calc-buttons">
                     <button data-number="1">1</button>
                     <button data-number="2">2</button>
@@ -54,3 +55,5 @@
     </footer>
 </body>
 </html>
+
+
